Prices section is done.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
   </head>
+
   <body>
     <div class="container">
       <nav class="navbar navbar-default">
+
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">Prices</a>
         </div>
+
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="names.html">Names</a></li>
           </ul>
         </div>
-      </div>
-    </nav>
+
+      </nav>
+    </div>
 
     <div class="container">
       <div class="row">
@@ -78,11 +82,7 @@
           <div class="page-header">
             <h3>Answer</h3>
           </div>
-          <!--
-            replace this comment with a div with an ID
-            and make your javascript code fill this div's innerHTML with
-            the correct answer
-          -->
+          <div id='output'></div>
         </div>
       </div>
     </div>
