--- a/names.html
+++ b/names.html
@@ -66,10 +66,7 @@ Nat Lebsack</textarea>
           <div class="page-header">
             <h3>Answer</h3>
           </div>
-          <!--
-            replace this comment with a UL with an ID
-            and make your javascript code append elements to this UL
-          -->
+          <ul id='out'></ul>
         </div>
       </div>
     </div>
